@@ -3,6 +3,10 @@ Changelog
 
 2.0-dev - (unreleased)
 ----------------------
+* Feature: added migration script which adds IUberlistingView to every Folder
+  that had uberlisting_view as enabled layout in order to enable Uberlisting
+  View z3c.form editing form
+  [ichim-david]
 * Feature: Added default images for Topic, Collection and Folder
   [ichim-david]
 * Feature: Register package for Folder, Collection, Topic and 
